--- a/package.json
+++ b/package.json
@@ -21,11 +21,15 @@
     "@types/react-dom": "^18.2.17",
     "@types/react-swipeable-views": "^0.13.5",
     "@types/react-tooltip": "^4.2.4",
+    "@typescript-eslint/eslint-plugin": "^7.3.1",
+    "@typescript-eslint/parser": "^7.3.1",
     "antd": "^5.12.1",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
     "devextreme-react": "^18.2.16",
     "docxtemplater": "^3.43.0",
+    "fs.realpath": "^1.0.0",
+    "isexe": "^3.1.1",
     "jszip": "^3.10.1",
     "react": "18.2.0",
     "react-axios": "^2.0.6",
@@ -34,18 +38,23 @@
     "react-hook-form": "^7.49.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-swipeable-views": "^0.14.0",
     "react-tooltip": "^5.25.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
+  },
+  "browser": {
+    "fs": false,
+    "os": false,
+    "path": false
   },
   "peerDependencies": {
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -56,7 +65,7 @@
       "react-app/jest"
     ],
     "rules": {
-      "'no-unused-vars": "off" 
+      "'no-unused-vars": "off"
     }
   },
   "browserslist": {
